src/components/KickingBrassContent.css
@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap');


p {
    text-align: left;
    max-width: 500px;
    color: #a16edd;
}

.MuiTab-root {
    color: #a16edd !important;
}

.kb-canvas {
    width: 100%;
}

.MuiTabs-scroller {
    margin-top: 20%;
}

body {
    font-family: 'Rubik', sans-serif;
    background-color: #13001b;
    margin: 0;
}

.MuiCardContent-root {
    color: #a16edd;
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
}

.kickingbrass-body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 100%;
    background-color: #470061;
}


.kickingbrass-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    /* This will vertically center everything in the div */
    width: 100%;
    max-width: 800px;
    margin: auto;
    /* Centers the div horizontally within its parent */
    padding: 20px;
}

.MuiPaper-root {
    background-color: #ffffff00 !important; 
} 

.card h1,
h2,
h3,
h4,
h5,
h6 {
    max-width: 500px;
    color: #a16edd;
}

.card h2 {
    max-width: none;
    color: #a16edd !important;
}

.kb-logo {
    max-width: 200px;
    max-height: 200px;
}

.kb-canvas {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    min-height: 100vh;
    /* Full height to ensure centering works vertically */
    width: 100%;
    /* Full width to ensure centering works horizontally */
}

.kickingbrass-content h1 {
    font-size: 36px;
    margin-top: 5%;
    margin-bottom: 2%;
}

.kickingbrass-content p {
    color: #a16edd;
    font-size: 16px;
    font-family: 'Montserrat', serif;
}

.kickingbrass-box {
    background-color: #180d25;
    padding: 24px;
    border-radius: 8px;
}

.kickingbrass-card {
    margin-bottom: 16px !important;
    background-color: #6a1b9a;
    color: #ffe690;
}

.kickingbrass-button {
    background-color: #a16edd !important;
    color: #2b1742 !important;
    font-size: 16px;
    text-transform: none;
    padding: 10px 20px;
    border-radius: 4px;
    text-decoration: none;
    display: inline-block;
    margin-top: 10px;
}

.kickingbrass-button:hover {
    background-color: #9254aa;
}

.kickingbrass-cardheader {
    padding-bottom: 8px;
    color: #a16edd;
    font-family: 'Montserrat', serif;
}

.kickingbrass-content .MuiCardHeader-subheader {
    padding-bottom: 8px;
    color: #a16edd !important;
    font-family: 'Montserrat', serif;
}

.controls-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 20px;
}

.dense-list {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

.img1 {
    max-width: 100%;
    max-height: 100%;
    image-rendering: pixelated;
}

.links {
    display: flex;
    justify-content: center;
}

.card {
    width: auto;
    /* Allows the card to adjust its width based on its content */
    max-width: 800px;
    /* Keeps the card from becoming too wide */
    padding: 20px;
    /* Adds padding inside the card */
    margin: 20px auto;
    /* Ensures it remains centered horizontally */
    background-color: #180d25;
    /* Background color of the card */
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    /* Optional shadow for better visibility */
    display: inline-flex;
    /* Makes the card only as wide as its content plus padding */
    flex-direction: column;
    /* Aligns children elements in a column */
    align-items: center;
    /* Centers the items horizontally */
    justify-content: center;
    /* Centers the items vertically if there is extra space */
}

.download-card {
    background-color: rgb(41, 0, 52);
    width: 100%;
    max-width: 800px;
    image-rendering: pixelated;
}

.glossary-image {
    width: 100%;
    height: 200px;
    object-fit: contain;
    image-rendering: pixelated;
}

.sprite-row,
.sprite-row-flipped {
    margin-bottom: 50px;
    border-bottom: 1px solid #333;
    -webkit-transform: scaleX(-1);
    transform: scaleX(-1);
}

.image-card {
    background-color: #180d25;
    color: rgb(41, 0, 52);
    margin: 20px 0;
    padding: 20px;
    border-radius: 8px;
}

.image-card h2,
.image-card h3 {
    color: #a16edd;
}

.image-card Button {
    background-color: #a16edd;
    color: #a16edd;
    margin-top: 20px;

    &:hover {
        background-color: #9254aa;
    }
}

.image-card .MuiCardHeader-title {
    font-size: 18px;
    color: #2e1548;
}

.image-card .MuiCardHeader-subheader {
    font-size: 16px;
    color: #ccc;
}

@media (min-width: 751px) {}

@media (max-width: 750px) {
    .MuiCardContent-root {
        text-align: center;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }

    .kickingbrass-card {
        max-width: 400px;
    }

    .kickingbrass-content {
        padding: 10px;
    }

    .video-container {
        margin-top: 75px;
        margin-bottom: 0px;
        height: 250px;
    }

    .items-card {
        background-color: rgb(41, 0, 52);
        margin: 20px;
        padding: auto;
        width: 100%;
        min-width: 150px;
    }
}

